added skill logos to portfolio

--- a/index.html
+++ b/index.html
@@ -4,58 +4,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
+    <title>Andre Burke | Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="http://www.favicon.cc/logo3d/492187.png">
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Linea_A_(Logo_Metro_Medellin).svg/2000px-Linea_A_(Logo_Metro_Medellin).svg.png">
 </head>
 
 <body>
     <header>
         <div class="container-fluid top-bar">
             <div class="row">
-                <div class="list-center">
+                <div class="list-center list-style">
                     <ul>
-                        <a class="list-inline" href="">
-                            <li>Home</li>
-                        </a>
-                        <a class="list-inline" href="">
-                            <li>Skills</li>
-                        </a>
-                        <a class="list-inline" href="">
-                            <li>Resume</li>
-                        </a>
-                        <a class="list-inline" href="">
-                            <li>Education</li>
-                        </a>
-                        <a class="list-inline" href="">
-                            <li>Me</li>
-                        </a>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="">Resume</a></li>
+                        <li><a href="">Education</a></li>
+                        <li><a href="">Me</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </header>
 
-    <main class="container-fluid">
-        <section>
+    <main>
+        <section class="container-fluid" id="home">
             <div class="row main-margin">
                 <div class="welcome-img">
                     <h1 class="text-center welcome">Andre Burke</h1>
+                    <h1 class="text-center white">Web Developer</h1>
+                    <h1 class="text-center icon-style">
+                        <a href="https://www.linkedin.com/in/aburkex24" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://github.com/aburkex24" target="_blank"><i class="fa fa-github"></i></a>
+                    </h1>
                 </div>
             </div>
         </section>
 
-        <section class="row">
-            <div>
-                <h1 class="text-center skills">Skills</h1>
-                <h1>Hello</h1>
-                <h1>Hello</h1>
-                <h1>Hello</h1>
-                <h1>Hello</h1>
-                <h1>Hello</h1>
-                <h1>Hello</h1>
+        <section class="container-fluid">
+            <div id="skills">
+            </div>
+            <div class="row">
+                <h1 class="text-center white sml-margin">Skills</h1>
+                <p class="center-block underline"></p>
+                <h2 class="text-center">Check out what I can do!</h2>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="center-block skill-set img-responsive" src="img/HTML5_Logo_512.png" alt="">
+                    <h3 class="text-center">HTML 5</h3>
+                </div>
+                <div class="col-md-4">
+                    <img class="center-block skill-set img-responsive" src="img/css3-logo.png" alt="">
+                    <h3 class="text-center">CSS 3</h3>
+                </div>
+                <div class="col-md-4">
+                    <img class="center-block skill-set img-responsive" src="img/javascript-logo.png" alt="">
+                    <h3 class="text-center">JavaScript</h3>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="center-block skill-set img-responsive" src="img/angularjs-logo.png" alt="">
+                    <h3 class="text-center">AngularJs</h3>
+                </div>
+                <div class="col-md-4">
+                    <img class="center-block skill-set img-responsive" src="https://s3.amazonaws.com/media-p.slid.es/uploads/cristiancortez/images/89296/mongo_bumper.sh-600x600.png" alt="">
+                    <h3 class="text-center">MongoDB</h3>
+                </div>
+                <div class="col-md-4">
+                    <img class="skill-set img-responsive center-block" src="http://www.exuberantsolutions.com/course_logo/jquery-icon.png" alt="">
+                    <h3 class="text-center">JQuery</h3>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="center-block skill-set img-responsive" src="img/express.png" alt="">
+                    <h3 class="text-center">ExpressJs</h3>
+                </div>
+                <div class="col-md-4">
+                    <img class="center-block skill-set img-responsive" src="img/nodejs.png" alt="">
+                    <h3 class="text-center">NodeJs</h3>
+                </div>
+                <div class="col-md-4">
+                    <img class="center-block skill-set img-responsive" src="img/git-logo.png" alt="">
+                    <h3 class="text-center">Git</h3>
+                </div>
             </div>
         </section>
     </main>
