added smooth scroll to the hrefs

--- a/index.html
+++ b/index.html
@@ -96,8 +96,16 @@
                 </div>
             </div>
         </section>
+
+        <section class="container-fluid">
+            <div class="row">
+                
+            </div>
+        </section>
+
     </main>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="main.js"></script>
 </body>
 
