--- a/index.html
+++ b/index.html
@@ -13,6 +13,37 @@
 
 <body>
     <header>
+
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class=""><a href="#home">Home<span class="sr-only">(current)</span></a></li>
+                        <li class=""><a href="#skills">Skills<span class="sr-only">(current)</span></a></li>
+                        <li class=""><a href="#/todo">Resume<span class="sr-only">(current)</span></a></li>
+                        <li class=""><a href="#/todo">Education<span class="sr-only">(current)</span></a></li>
+                        <li class=""><a href="#/todo">Portfolio<span class="sr-only">(current)</span></a></li>
+                        <li class=""><a href="#/todo">Me<span class="sr-only">(current)</span></a></li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container-fluid -->
+        </nav>
+
+
+        <!--
         <div class="container-fluid top-bar">
             <div class="row">
                 <div class="list-center list-style">
@@ -26,6 +57,9 @@
                 </div>
             </div>
         </div>
+-->
+
+
     </header>
 
     <main>
@@ -99,12 +133,13 @@
 
         <section class="container-fluid">
             <div class="row">
-                
+
             </div>
         </section>
 
     </main>
-
+    <script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="main.js"></script>
 </body>
