--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 
 <body>
     <header>
-
         <nav class="navbar navbar-default">
             <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
@@ -26,40 +24,18 @@
                     </button>
                 </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse list-style" id="bs-example-navbar-collapse-1">
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class=""><a href="#home">Home<span class="sr-only">(current)</span></a></li>
                         <li class=""><a href="#skills">Skills<span class="sr-only">(current)</span></a></li>
-                        <li class=""><a href="#/todo">Resume<span class="sr-only">(current)</span></a></li>
-                        <li class=""><a href="#/todo">Education<span class="sr-only">(current)</span></a></li>
-                        <li class=""><a href="#/todo">Portfolio<span class="sr-only">(current)</span></a></li>
-                        <li class=""><a href="#/todo">Me<span class="sr-only">(current)</span></a></li>
+                        <li class=""><a href="#/resume">Resume<span class="sr-only">(current)</span></a></li>
+                        <li class=""><a href="#/education">Education<span class="sr-only">(current)</span></a></li>
+                        <li class=""><a href="#/portfolio">Portfolio<span class="sr-only">(current)</span></a></li>
+                        <li class=""><a href="#/me">Me<span class="sr-only">(current)</span></a></li>
                     </ul>
                 </div>
-                <!-- /.navbar-collapse -->
             </div>
-            <!-- /.container-fluid -->
         </nav>
-
-
-        <!--
-        <div class="container-fluid top-bar">
-            <div class="row">
-                <div class="list-center list-style">
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                        <li><a href="">Resume</a></li>
-                        <li><a href="">Education</a></li>
-                        <li><a href="">Me</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
--->
-
-
     </header>
 
     <main>
