pushed resume, portfolio, contact sections

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andre Burke | Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -28,10 +28,9 @@
                     <ul class="nav navbar-nav">
                         <li class=""><a href="#home">Home<span class="sr-only">(current)</span></a></li>
                         <li class=""><a href="#skills">Skills<span class="sr-only">(current)</span></a></li>
-                        <li class=""><a href="#/resume">Resume<span class="sr-only">(current)</span></a></li>
-                        <li class=""><a href="#/education">Education<span class="sr-only">(current)</span></a></li>
-                        <li class=""><a href="#/portfolio">Portfolio<span class="sr-only">(current)</span></a></li>
-                        <li class=""><a href="#/me">Me<span class="sr-only">(current)</span></a></li>
+                        <li class=""><a href="#resume">Resume<span class="sr-only">(current)</span></a></li>
+                        <li class=""><a href="#portfolio">Portfolio<span class="sr-only">(current)</span></a></li>
+                        <li class=""><a href="#me">Me<span class="sr-only">(current)</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -53,12 +52,13 @@
         </section>
 
         <section class="container-fluid">
-            <div id="skills">
-            </div>
             <div class="row">
-                <h1 class="text-center white sml-margin">Skills</h1>
-                <p class="center-block underline"></p>
-                <h2 class="text-center">Check out what I can do!</h2>
+                <div id="skills"></div>
+                <div>
+                    <h1 class="text-center white sml-margin">Skills</h1>
+                    <p class="center-block underline"></p>
+                    <h2 class="text-center">Check out what I can do!</h2>
+                </div>
             </div>
 
             <div class="row">
@@ -108,6 +108,49 @@
         </section>
 
         <section class="container-fluid">
+            <div class="row">
+                <div id="resume"></div>
+                <div>
+                    <h1 class="text-center white sml-margin">Resume</h1>
+                    <p class="center-block underline"></p>
+                    <h2 class="text-center">I've got a long history!</h2>
+                </div>
+                <div class="row">
+                    <div class="pdf-container center-block margin">
+                        <iframe src="resume/AndreResume2016.pdf" allowfullscreen="" frameborder="0"></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container-fluid">
+            <div class="row">
+                <div id="portfolio"></div>
+                <div>
+                    <h1 class="text-center white sml-margin">Portfolio</h1>
+                    <p class="center-block underline"></p>
+                    <h2 class="text-center">Here are some cool apps I've built!</h2>
+                </div>
+            </div>
+        </section>
+
+        <section class="container-fluid">
+            <div class="row">
+                <div id="me"></div>
+                <div>
+                    <h1 class="text-center white sml-margin">Me</h1>
+                    <p class="center-block underline"></p>
+                    <h2 class="text-center">Contact info? Look no further!</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-md-offset-1 margin">
+                    <img src="img/my-picture-portfolio.jpg" alt="">
+                </div>
+                <div>
+                    <p></p>
+                </div>
+            </div>
             <div class="row">
 
             </div>
