pushed profile pic about

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div>
                     <h1 class="text-center white sml-margin">Resume</h1>
                     <p class="center-block underline"></p>
-                    <h2 class="text-center">I've got a long history!</h2>
+                    <h2 class="text-center">I've got a work long history.</h2>
                 </div>
                 <div class="row">
                     <div class="pdf-container center-block margin">
@@ -129,8 +129,22 @@
                 <div>
                     <h1 class="text-center white sml-margin">Portfolio</h1>
                     <p class="center-block underline"></p>
-                    <h2 class="text-center">Here are some cool apps I've built!</h2>
+                    <h2 class="text-center">Here are some cool apps I've built.</h2>
                 </div>
+            </div>
+            <div class="row">
+                <div>
+                    <a href=""></a><img src="" alt="">
+                </div>
+                <div>
+                    <a href=""><img src="" alt=""></a>
+                </div>
+            </div>
+            <div class="row">
+                <a href=""></a><img src="" alt="">
+            </div>
+            <div>
+                <a href=""><img src="" alt=""></a>
             </div>
         </section>
 
@@ -144,11 +158,25 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-md-offset-1 margin">
-                    <img src="img/my-picture-portfolio.jpg" alt="">
+                <div class="col-md-2 col-md-offset-1 margin">
+                    <img class="img-responsive" src="img/my-picture-portfolio.jpg" alt="">
                 </div>
-                <div>
-                    <p></p>
+                <div class="col-md-8 col-md-offset-1 margin">
+                    <h4 class="margin">What sparked my interest in coding was my love for technology. For several years now I've been a thoroughly involved tech enthusiast.
+                    it started with smartphones. My very first smartphone was the iPhone 3GS, it was my first step into the newly arisen smartphone revolution
+                        after doing hours of research I decided to make the switch to Android.
+                    </h4>
+                    <br>
+                    <h4>I've been using an Android device ever since. Slowly I began to develop 
+                    love for all sorts of technology and gadgets. After so long I decided that using and admiring tech wasn't enough for me so I turned to something even better, programming.
+                    It became obvious to me that I wanted to develop software for the devices I was so invested in. The first language I ever used was C#, as I was 
+                    learning to develop it felt like a whole new world of possibilities and that is what I love about programming, you can do anything with it.
+                    </h4>
+                    <br>
+                    <h4>
+                        I have since become familiar with many different technologies, my skills only list a few that I've used. Writing code is easily what I can 
+                        call my passion!
+                    </h4>
                 </div>
             </div>
             <div class="row">
