pushed resume size change

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </section>
 
-        <section class="container-fluid">
+        <section class="container">
             <div class="row">
                 <div id="skills"></div>
                 <div>
@@ -107,7 +107,7 @@
             </div>
         </section>
 
-        <section class="container-fluid">
+        <section class="container">
             <div class="row">
                 <div id="resume"></div>
                 <div>
@@ -115,15 +115,13 @@
                     <p class="center-block underline"></p>
                     <h2 class="text-center">I've got a work long history.</h2>
                 </div>
-                <div class="row">
-                    <div class="pdf-container center-block margin">
-                        <iframe src="resume/AndreResume2016.pdf" allowfullscreen="" frameborder="0"></iframe>
-                    </div>
+                <div class="margin">
+                    <img class="img-responsive col-md-10 col-sm-12 col-xs-12 col-md-offset-1" src="img/Screen%20Shot%202016-07-09%20at%207.29.12%20AM.png" alt="">
                 </div>
             </div>
         </section>
 
-        <section class="container-fluid">
+        <section class="container">
             <div class="row">
                 <div id="portfolio"></div>
                 <div>
@@ -144,11 +142,11 @@
                 <a href=""></a><img src="" alt="">
             </div>
             <div>
-                <a href=""><img src="" alt=""></a>
+                <a href=""><img src="" class="" alt=""></a>
             </div>
         </section>
 
-        <section class="container-fluid">
+        <section class="container">
             <div class="row">
                 <div id="me"></div>
                 <div>
@@ -158,10 +156,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-md-offset-1 margin">
+                <div class="col-md-3 col-md-offset-1 margin">
                     <img class="img-responsive" src="img/my-picture-portfolio.jpg" alt="">
                 </div>
-                <div class="col-md-8 col-md-offset-1 margin">
+                <div class="col-md-7 col-md-offset-1 margin">
                     <h4 class="margin">What sparked my interest in coding was my love for technology. For several years now I've been a thoroughly involved tech enthusiast.
                     it started with smartphones. My very first smartphone was the iPhone 3GS, it was my first step into the newly arisen smartphone revolution
                         after doing hours of research I decided to make the switch to Android.
@@ -172,11 +170,6 @@
                     It became obvious to me that I wanted to develop software for the devices I was so invested in. The first language I ever used was C#, as I was 
                     learning to develop it felt like a whole new world of possibilities and that is what I love about programming, you can do anything with it.
                     </h4>
-                    <br>
-                    <h4>
-                        I have since become familiar with many different technologies, my skills only list a few that I've used. Writing code is easily what I can 
-                        call my passion!
-                    </h4>
                 </div>
             </div>
             <div class="row">
@@ -185,6 +178,8 @@
         </section>
 
     </main>
+    
+    <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
