pushed styling changes contact footer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div>
                     <h1 class="text-center white sml-margin">Skills</h1>
                     <p class="center-block underline"></p>
-                    <h2 class="text-center">Check out what I can do!</h2>
+                    <h2 class="text-center text">Check out what I can do!</h2>
                 </div>
             </div>
 
@@ -113,10 +113,10 @@
                 <div>
                     <h1 class="text-center white sml-margin">Resume</h1>
                     <p class="center-block underline"></p>
-                    <h2 class="text-center">I've got a work long history.</h2>
+                    <h2 class="text-center text">I've got a work long history.</h2>
                 </div>
                 <div class="margin">
-                    <img class="img-responsive col-md-10 col-sm-12 col-xs-12 col-md-offset-1" src="img/Screen%20Shot%202016-07-09%20at%207.29.12%20AM.png" alt="">
+                    <img class="img-responsive col-md-8 col-sm-12 col-xs-12 col-md-offset-2" src="img/Screen%20Shot%202016-07-09%20at%207.29.12%20AM.png" alt="">
                 </div>
             </div>
         </section>
@@ -127,7 +127,7 @@
                 <div>
                     <h1 class="text-center white sml-margin">Portfolio</h1>
                     <p class="center-block underline"></p>
-                    <h2 class="text-center">Here are some cool apps I've built.</h2>
+                    <h2 class="text-center text">Here are some cool apps I've built.</h2>
                 </div>
             </div>
             <div class="row">
@@ -152,7 +152,7 @@
                 <div>
                     <h1 class="text-center white sml-margin">Me</h1>
                     <p class="center-block underline"></p>
-                    <h2 class="text-center">Contact info? Look no further!</h2>
+                    <h2 class="text-center text">Contact info? Look no further!</h2>
                 </div>
             </div>
             <div class="row">
@@ -160,25 +160,38 @@
                     <img class="img-responsive" src="img/my-picture-portfolio.jpg" alt="">
                 </div>
                 <div class="col-md-7 col-md-offset-1 margin">
-                    <h4 class="margin">What sparked my interest in coding was my love for technology. For several years now I've been a thoroughly involved tech enthusiast.
+                    <h4 class="margin text">What sparked my interest in coding was my love for technology. For several years now I've been a thoroughly involved tech enthusiast.
                     it started with smartphones. My very first smartphone was the iPhone 3GS, it was my first step into the newly arisen smartphone revolution
                         after doing hours of research I decided to make the switch to Android.
                     </h4>
                     <br>
-                    <h4>I've been using an Android device ever since. Slowly I began to develop 
+                    <h4 class="text">I've been using an Android device ever since. Not long after I began to develop 
                     love for all sorts of technology and gadgets. After so long I decided that using and admiring tech wasn't enough for me so I turned to something even better, programming.
                     It became obvious to me that I wanted to develop software for the devices I was so invested in. The first language I ever used was C#, as I was 
                     learning to develop it felt like a whole new world of possibilities and that is what I love about programming, you can do anything with it.
                     </h4>
                 </div>
             </div>
-            <div class="row">
-
+            <div class="row margin">
+                <div class="contact">
+                    <div class="">
+                        <a href="mailto:aburkex24@gmail.com" target="_top"><h4 class="text-center"><span class="glyphicon glyphicon-envelope"></span> aburkex24@gmail.com</h4></a>
+                    </div>
+                    <div>
+                        <h4 class="text-center phone"><span class="glyphicon glyphicon-phone"></span> 801-708-2782</h4>
+                    </div>
+                    <div>
+                        <h1 class="text-center contact-icon icon-style">
+                        <a href="https://www.linkedin.com/in/aburkex24" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://github.com/aburkex24" target="_blank"><i class="fa fa-github"></i></a>
+                        </h1>
+                    </div>
+                </div>
             </div>
         </section>
 
     </main>
-    
+
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
