pushed styling changes

--- a/index.html
+++ b/index.html
@@ -130,19 +130,23 @@
                     <h2 class="text-center text">Here are some cool apps I've built.</h2>
                 </div>
             </div>
+            
             <div class="row">
-                <div>
+                <div class="col-md-4">
                     <a href=""></a><img src="" alt="">
                 </div>
-                <div>
+                <div class="col-md-4">
                     <a href=""><img src="" alt=""></a>
                 </div>
             </div>
+            
             <div class="row">
-                <a href=""></a><img src="" alt="">
-            </div>
-            <div>
-                <a href=""><img src="" class="" alt=""></a>
+                <div class="col-md-4">
+                    <a href=""></a><img src="" alt="">
+                </div>
+                <div class="col-md-4">
+                    <a href=""><img src="" alt=""></a>
+                </div>
             </div>
         </section>
 
