pushed new images for projects

--- a/index.html
+++ b/index.html
@@ -130,22 +130,40 @@
                     <h2 class="text-center text">Here are some cool apps I've built.</h2>
                 </div>
             </div>
-            
-            <div class="row">
-                <div class="col-md-4">
-                    <a href=""></a><img src="" alt="">
+
+            <div class="row margin">
+                <div class="col-md-4 col-md-offset-1">
+                   <h3 class="text-center">K & J Diaries</h3>
+                    <a href=""></a><img class="img-responsive" src="screenshots/k-and-j.png" alt="">
                 </div>
                 <div class="col-md-4">
-                    <a href=""><img src="" alt=""></a>
+                    <h4></h4>
+                </div>
+
+                <div class="col-md-4 col-md-offset-2">
+                    <h3 class="text-center">My Litte Brony</h3>
+                    <a href=""><img class="img-responsive" src="screenshots/little-brony.png" alt=""></a>
+                </div>
+                <div class="col-md-4">
+                    <h4></h4>
                 </div>
             </div>
-            
-            <div class="row">
-                <div class="col-md-4">
-                    <a href=""></a><img src="" alt="">
+
+            <div class="row margin">
+                <div class="col-md-4 col-md-offset-1">
+                    <h3 class="text-center">Purchase Tracker</h3>
+                    <a href=""></a><img class="img-responsive" src="screenshots/purchase-track.png" alt="">
                 </div>
                 <div class="col-md-4">
-                    <a href=""><img src="" alt=""></a>
+                    <h4></h4>
+                </div>
+
+                <div class="col-md-4 col-md-offset-2">
+                    <h3 class="text-center">Simple Weather App</h3>
+                    <a href=""><img class="img-responsive" src="screenshots/weather-app.png" alt=""></a>
+                </div>
+                <div class="col-md-4">
+                    <h4></h4>
                 </div>
             </div>
         </section>
