pushed project section complete

--- a/index.html
+++ b/index.html
@@ -127,43 +127,49 @@
                 <div>
                     <h1 class="text-center white sml-margin">Portfolio</h1>
                     <p class="center-block underline"></p>
-                    <h2 class="text-center text">Here are some cool apps I've built.</h2>
+                    <h2 class="text-center text">Here are a few cool apps I've created.</h2>
                 </div>
             </div>
 
             <div class="row margin">
                 <div class="col-md-4 col-md-offset-1">
-                   <h3 class="text-center">K & J Diaries</h3>
-                    <a href=""></a><img class="img-responsive" src="screenshots/k-and-j.png" alt="">
-                </div>
-                <div class="col-md-4">
-                    <h4></h4>
+                    <h3 class="text-center">K & J Diaries</h3>
+                    <p class="center-block underline"></p>
+                    <a href="https://github.com/aburkex24/vschool-assignments/tree/master/projects/k-and-j-diaries" target="_blank"><img title="Click To See K & J Code" class="img-responsive grow img-round description" src="screenshots/k-and-j.png" alt=""></a>
+                    <h4 class="text-center text description">K & J Diaries showcases my neat design abilities. For this task I actually cloned an actual site 
+                    for the design experience, the outcome is this clean replicated site. Click the image to see the code.
+                    </h4>
                 </div>
 
                 <div class="col-md-4 col-md-offset-2">
                     <h3 class="text-center">My Litte Brony</h3>
-                    <a href=""><img class="img-responsive" src="screenshots/little-brony.png" alt=""></a>
-                </div>
-                <div class="col-md-4">
-                    <h4></h4>
+                    <p class="center-block underline"></p>
+                    <a href="https://github.com/aburkex24/vschool-assignments/tree/master/projects/my-little-brony" target="_blank"><img title="Click To See My Little Brony Code" class="img-responsive grow img-round description" src="screenshots/little-brony.png" alt=""></a>
+                    <h4 class="text-center text description">My Little Brony was a fun little project for all of those true brony fans out there. 
+                    Using AngularJs a user is allowed to add a name for the pony, an image url, and also a username if they wish. 
+                    all images are stored on a server allowing the ponies to persist between refreshes. Click the image to see the code.
+                    </h4>
                 </div>
             </div>
 
             <div class="row margin">
                 <div class="col-md-4 col-md-offset-1">
                     <h3 class="text-center">Purchase Tracker</h3>
-                    <a href=""></a><img class="img-responsive" src="screenshots/purchase-track.png" alt="">
-                </div>
-                <div class="col-md-4">
-                    <h4></h4>
+                    <p class="center-block underline"></p>
+                    <a href="https://github.com/aburkex24/purchase-tracker" target="_blank"><img title="Click To See Purchase Tracker Code" class="img-responsive grow img-round description" src="screenshots/purchase-track.png" alt=""></a>
+                    <h4 class="text-center text description">The Purchase Tracker is my personal favorite, and quite useful! This app demonstrates many of my abilites 
+                    such as AngularJs for the front-end and also NodeJs, ExpressJs and MongoDB for the server and database. I added user authentication to this app. 
+                    This will allow a user to signup and login to add and track purchases they've made, super neat. Click the image to see the code.
+                    </h4>
                 </div>
 
                 <div class="col-md-4 col-md-offset-2">
                     <h3 class="text-center">Simple Weather App</h3>
-                    <a href=""><img class="img-responsive" src="screenshots/weather-app.png" alt=""></a>
-                </div>
-                <div class="col-md-4">
-                    <h4></h4>
+                    <p class="center-block underline"></p>
+                    <a href="https://github.com/aburkex24/vschool-assignments/tree/master/projects/simple-weather-app" target="_blank"><img title="Click To See Weather App Code" class="img-responsive grow img-round description" src="screenshots/weather-app.png" alt=""></a>
+                    <h4 class="text-center text description">This weather app allows you to get the weather for any location of your choosing. Using AngularJs, HTML5, Javascript, CSS3, Yahoo 
+                    weather API, and Google Location API. This is one of my personal favorites, easy to use and clean. Click the image to see the code.
+                    </h4>
                 </div>
             </div>
         </section>
@@ -179,7 +185,7 @@
             </div>
             <div class="row">
                 <div class="col-md-3 col-md-offset-1 margin">
-                    <img class="img-responsive" src="img/my-picture-portfolio.jpg" alt="">
+                    <img class="img-responsive img-round" src="img/my-picture-portfolio.jpg" alt="">
                 </div>
                 <div class="col-md-7 col-md-offset-1 margin">
                     <h4 class="margin text">What sparked my interest in coding was my love for technology. For several years now I've been a thoroughly involved tech enthusiast.
