pushed final style change

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <h2 class="text-center text">I've got a work long history.</h2>
                 </div>
                 <div class="margin">
-                    <img class="img-responsive col-md-8 col-sm-12 col-xs-12 col-md-offset-2" src="img/Screen%20Shot%202016-07-09%20at%207.29.12%20AM.png" alt="">
+                    <img class="img-responsive col-md-8 col-sm-12 col-xs-12 col-md-offset-2" src="resume/Screen%20Shot%202016-07-11%20at%202.21.04%20PM.png" alt="">
                 </div>
             </div>
         </section>
