pushed about update

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <h4 class="text">I've been using an Android device ever since. Not long after I began to develop 
                     love for all sorts of technology and gadgets. After so long I decided that using and admiring tech wasn't enough for me so I turned to something even better, programming.
                     It became obvious to me that I wanted to develop software for the devices I was so invested in. The first language I ever used was C#, as I was 
-                    learning to develop it felt like a whole new world of possibilities and that is what I love about programming, you can do anything with it.
+                    learning to develop in C#, it felt like a whole new world of possibilities and that is what I absolutely love about programming, you can do most anything with it.
                     </h4>
                 </div>
             </div>
