pushed about me change

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <img class="img-responsive img-round" src="img/my-picture-portfolio.jpg" alt="">
                 </div>
                 <div class="col-md-7 col-md-offset-1 margin">
-                    <h4 class="margin text">What sparked my interest in coding was my love for technology. For several years now I've been a thoroughly involved tech enthusiast.
+                    <h4 class="margin text">What sparked my interest in coding was my love for technology. For several years now I've been an actively involved tech enthusiast.
                     it started with smartphones. My very first smartphone was the iPhone 3GS, it was my first step into the newly arisen smartphone revolution
                         after doing hours of research I decided to make the switch to Android.
                     </h4>
