--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
 
             <div class="row">
                 <div class="col-md-4">
+                    <img class="center-block skill-set img-responsive" src="" alt="">
+                    <h3 class="text-center">C#</h3>
+                </div>
+                <div class="col-md-4">
+                    <img class="center-block skill-set img-responsive" src="" alt="">
+                    <h3 class="text-center">SQL Server</h3>
+                </div>
+                <div class="col-md-4">
+                    <img class="center-block skill-set img-responsive" src="" alt="">
+                    <h3 class="text-center">nHibernate ORM's</h3>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
                     <img class="center-block skill-set img-responsive" src="img/HTML5_Logo_512.png" alt="">
                     <h3 class="text-center">HTML 5</h3>
                 </div>
