pushed new icon images for skills.

--- a/index.html
+++ b/index.html
@@ -63,37 +63,37 @@
 
             <div class="row">
                 <div class="col-md-4">
-                    <img class="center-block skill-set img-responsive" src="" alt="">
+                    <img class="center-block skill-set img-responsive" src="icons/c-sharp-logo.png" alt="">
                     <h3 class="text-center">C#</h3>
                 </div>
                 <div class="col-md-4">
-                    <img class="center-block skill-set img-responsive" src="" alt="">
+                    <img class="center-block skill-set img-responsive" src="icons/sql-server-logo.png" alt="">
                     <h3 class="text-center">SQL Server</h3>
                 </div>
                 <div class="col-md-4">
-                    <img class="center-block skill-set img-responsive" src="" alt="">
+                    <img class="center-block skill-set img-responsive" src="icons/NHibernate-logo-svg.png" alt="">
                     <h3 class="text-center">nHibernate ORM's</h3>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-4">
-                    <img class="center-block skill-set img-responsive" src="img/HTML5_Logo_512.png" alt="">
+                    <img class="center-block skill-set img-responsive" src="icons/HTML5_Logo_512.png" alt="">
                     <h3 class="text-center">HTML 5</h3>
                 </div>
                 <div class="col-md-4">
-                    <img class="center-block skill-set img-responsive" src="img/css3-logo.png" alt="">
+                    <img class="center-block skill-set img-responsive" src="icons/css3-logo.png" alt="">
                     <h3 class="text-center">CSS 3</h3>
                 </div>
                 <div class="col-md-4">
-                    <img class="center-block skill-set img-responsive" src="img/javascript-logo.png" alt="">
+                    <img class="center-block skill-set img-responsive" src="icons/javascript-logo.png" alt="">
                     <h3 class="text-center">JavaScript</h3>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-4">
-                    <img class="center-block skill-set img-responsive" src="img/angularjs-logo.png" alt="">
+                    <img class="center-block skill-set img-responsive" src="icons/angularjs-logo.png" alt="">
                     <h3 class="text-center">AngularJs</h3>
                 </div>
                 <div class="col-md-4">
@@ -108,15 +108,15 @@
 
             <div class="row">
                 <div class="col-md-4">
-                    <img class="center-block skill-set img-responsive" src="img/express.png" alt="">
+                    <img class="center-block skill-set img-responsive" src="icons/express.png" alt="">
                     <h3 class="text-center">ExpressJs</h3>
                 </div>
                 <div class="col-md-4">
-                    <img class="center-block skill-set img-responsive" src="img/nodejs.png" alt="">
+                    <img class="center-block skill-set img-responsive" src="icons/nodejs.png" alt="">
                     <h3 class="text-center">NodeJs</h3>
                 </div>
                 <div class="col-md-4">
-                    <img class="center-block skill-set img-responsive" src="img/git-logo.png" alt="">
+                    <img class="center-block skill-set img-responsive" src="icons/git-logo.png" alt="">
                     <h3 class="text-center">Git</h3>
                 </div>
             </div>
@@ -200,7 +200,7 @@
             </div>
             <div class="row">
                 <div class="col-md-3 col-md-offset-1 margin">
-                    <img class="img-responsive img-round" src="img/my-picture-portfolio.jpg" alt="">
+                    <img class="img-responsive img-round" src="icons/my-picture-portfolio.jpg" alt="">
                 </div>
                 <div class="col-md-7 col-md-offset-1 margin">
                     <h4 class="margin text">What sparked my interest in coding was my love for technology. For several years now I've been an actively involved tech enthusiast.
