--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <h3 class="text-center">SQL Server</h3>
                 </div>
                 <div class="col-md-4">
-                    <img class="center-block skill-set img-responsive" src="icons/NHibernate-logo-svg.png" alt="">
+                    <img class="center-block skill-set img-responsive" src="icons/NHibernate-logo.svg.png" alt="">
                     <h3 class="text-center">nHibernate ORM's</h3>
                 </div>
             </div>
